tests/snapshots/run_wpt_conformance__onnx_gemm_two_float32_2D_tensors_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gemm.https.any.js",
    "gemm two float32 2D tensors default options",
    "onnx",
    "PASS",
)
